<resources>
    <string name="app_name">Animal Shelters</string>
    <string name="google_maps_key">AIzaSyC5Le3OLs_9vUAnbSsvMQD4gCWp9nZjN8Y</string>
    <string name="settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_admin">Administration</string>
    <string name="title_activity_fav_animals">Favorite Animals</string>
    <string name="title_activity_animals">Animals</string>
    <string name="title_activity_shelters">Animal Shelters</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="breed">Breed</string>
    <string name="species">Species</string>
    <string name="sex">Sex</string>
    <string name="shelter">Shelter</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postal">Postal code</string>
    <string name="number">Number</string>
    <string name="bankAccount">Bank account number</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Zaloguj</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="witaj_w_zwierzakowie">Witaj w Zwierzakowie !</string>
    <string name="szukaj_zwierz_cia">Szukaj zwierzęcia</string>
    <string name="ulubione">Ulubione</string>
    <string name="moje_konto">Moje konto</string>
    <string name="administracja">Administracja</string>
    <string name="o_aplikacji">O aplikacji</string>
</resources>
