<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    app:layout_constraintTop_toBottomOf="@id/searchToolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shelter_id"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/shelterIcon"
            android:src="@drawable/baseline_home_black_18dp"
            android:layout_width="18dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/shelterIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="18dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_email_black_18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_layout"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            app:layout_constraintTop_toBottomOf="@id/edit_name_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="18dp"
            android:layout_height="70dp"
            android:src="@drawable/baseline_call_black_18dp"
            app:layout_constraintTop_toBottomOf="@id/edit_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_email_layout"
            app:layout_constraintStart_toEndOf="@id/phoneIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/phone"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/addressIcon"
            android:layout_width="18dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_map_black_18dp"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_street_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_layout"
            app:layout_constraintStart_toEndOf="@id/addressIcon"
            app:layout_constraintEnd_toStartOf="@id/edit_street_number_layout">

            <EditText
                android:id="@+id/edit_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/street"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_street_number_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_layout"
            app:layout_constraintStart_toEndOf="@id/edit_street_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_street_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_city_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_street_layout"
            app:layout_constraintStart_toEndOf="@id/addressIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/city"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_postal_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_city_layout"
            app:layout_constraintStart_toEndOf="@id/addressIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/postal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/baseline_save_black_18dp" />

    </android.support.constraint.ConstraintLayout>