<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_id"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/personIcon"
            android:src="@drawable/baseline_person_black_18dp"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/personIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_surname_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_name_layout"
            app:layout_constraintStart_toEndOf="@id/personIcon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp">
            <EditText
                android:id="@+id/edit_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/surname"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_email_black_18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_surname_layout"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintStart_toEndOf="@id/emailIcon"
            app:layout_constraintTop_toBottomOf="@id/edit_surname_layout"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/cakeIcon"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_cake_black_18dp"
            app:layout_constraintTop_toBottomOf="@id/edit_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_birthday_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_email_layout"
            app:layout_constraintStart_toEndOf="@id/cakeIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="date"
                android:hint="@string/birthday"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="18dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/baseline_lock_black_18dp"
            app:layout_constraintTop_toBottomOf="@id/edit_birthday_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/edit_birthday_layout"
            app:layout_constraintStart_toEndOf="@id/passwordIcon"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/userTypeIcon"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_password_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_work_black_18dp"/>

        <TextView
            android:id="@+id/userType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ItemTextMedium"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toEndOf="@id/userTypeIcon"
            app:layout_constraintTop_toBottomOf="@id/edit_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Role"/>

        <ImageView
            android:id="@+id/shelterIcon"
            android:src="@drawable/baseline_home_black_18dp"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userType"/>

        <TextView
            android:id="@+id/user_shelter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ItemTextMedium"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toEndOf="@id/shelterIcon"
            app:layout_constraintTop_toBottomOf="@id/userType"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Shelter"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/baseline_save_black_18dp" />
    </android.support.constraint.ConstraintLayout>




